--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <header>
-        <img class="logo" alt="Header Logo">
-        <ul>
+        <img class="logo" src="image-test.png" alt="Header Logo">
+        <ul class="navbar">
             <li>Link one</li>
             <li>Link two</li>
             <li>Link three</li>
@@ -19,16 +24,34 @@
         <section class="splash">
             <div class="splash-text">
                 <h1 class="title">This Website is awesome</h1>
-                <p class="splash-description"> blablalba</p>
+                <p class="splash-description"> Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever 
+                    since the 1500s, when an unknown printer took a galley of type and scrambled it to 
+                    make a type specimen book. It has survived not only five centuries, but also the leap 
+                    into electronic typesetting, remaining essentially unchanged. It was popularised 
+                    in the 1960s with the release of Letraset s</p>
                 <button class="splash-button">Sign Up</button>
             </div>
+            <img class="splash-image"  src="image-test.png" alt="imagem">
         </section>
         <section class="items-display">
             <h2 class="items-title"> here are some items</h2>
             <div class="items">
                 <div class="item">
-                    <img class="item-image" alt="missing-img">
+                    <img class="item-image" src="image-test.png" alt="missing-img">
                     <p class="item-description">this is some subtext of the image</p>
+                </div>
+                <div class="item">
+                    <img class="item-image" src="image-test.png" alt="missing-img">
+                    <p class="item-description">this is some subtext of the image</p>
+                </div>
+                <div class="item">
+                    <img class="item-image" src="image-test.png" alt="missing-img">
+                    <p class="item-description">this is some subtext of the image</p>
+                </div>
+                <div class="item">
+                    <img class="item-image" src="image-test.png" alt="missing-img">
+                    <p class="item-description">this is some d nfa fae af af fa rw qge af af af ghgrq gqe  of the image</p>
                 </div>
             </div>
         </section>
