--- a/index.html
+++ b/index.html
@@ -56,15 +56,19 @@
             </div>
         </section>
         <article class="quote">
-            <p class="quote-description"> blablabla</p>
+            <p class="quote-description"> blablabla blalbla ablbbof sgbngeanu hfaojifoi huauh hji0faha 
+                afoufaou  fdsafd hufsafauh fsauhhfa adbhyia adhu ad
+            </p>
             <div class="quote-person"> -Big chungusa</div>
         </article>
         <section class="disclaimer">
-            <div class="disclaimer-text">
-                <h3 class="disclaimer-title"> disclaim!</h3>
-                <p class="disclaimer-description"> bla bla bla</p>
+            <div class="disclaimer-area">
+                <div class="disclaimer-text">
+                    <h3 class="disclaimer-title"> disclaim!</h3>
+                    <p class="disclaimer-description"> bla bla bla</p>
+                </div>
+                <button class="disclaimer-button">Sign Up</button>
             </div>
-            <button class="disclaimer-button">Sign Up</button>
         </section>
     </main>
     <footer>
